[feat]: Adição de rota de verificação de token
